Fix collapsed menu in mobile view Fix centered title in mobile view Fix unreachable social buttons in mobile view Twitter added

--- a/src/RTG/SiteBundle/Resources/public/less/styles.less
+++ b/src/RTG/SiteBundle/Resources/public/less/styles.less
@@ -137,7 +137,7 @@ ol {
 }
 
 .title {
-    padding: 50px;
+    padding: 30px;
     text-align: center;
 
     a {
